Se termina de documentar la API, se agregan métodos CRUD a la tabla de productos
